@@ -1,3 +1,13 @@
+2008-06-20  Danny Backx  <dannybackx@users.sourceforge.net>
+
+	* include/aygshell.h: Include prsht.h.
+
+2008-06-20  Eric House <eehouse@eehouse.org>
+
+	* cegcc/importlibs/defs/aygshell.def, w32api/include/aygshell.h,
+	w32api/libce/aygshell.def (SHSendBackToFocusWindow, SHMBOF_NODEFAULT,
+	SHMBOF_NOTIFY, SHCMBM_OVERRIDEKEY, VK_TBACK) : Define.
+
 2008-05-22  Danny Backx  <dannybackx@users.sourceforge.net>
 
 	* include/projects.h: Add.
